New Rest Client interface with Apache HTTP client based implementation.