@@ -96,7 +96,8 @@ public class JavaFeatureRunner implements Callable<FeatureResult>
 
          boolean loadClassFromJar = StringUtils.isNotBlank( javaTestJarFile ) && Files.exists( Paths.get( javaTestJarFile ) );
 
-         Class<?> testCaseClass = loadClassFromJar ? (Class<?>) DynamicClassLoader.loadClass( javaTestJarFile, javaTest ) : (Class<?>) Class.forName( javaTest );
+         Class<?> testCaseClass = loadClassFromJar ? (Class<?>) DynamicClassLoader.loadClass( javaTestJarFile, javaTest )
+                  : (Class<?>) Class.forName( javaTest );
 
          Feature featureAnnotation = testCaseClass.getAnnotation( Feature.class );
 
@@ -116,7 +117,7 @@ public class JavaFeatureRunner implements Callable<FeatureResult>
          TreeMap<Integer, ArrayList<Method>> scenarioTearDownMethodsMap = new TreeMap<Integer, ArrayList<Method>>();
          TreeMap<Integer, ArrayList<Method>> featureTearDownMethodsMap = new TreeMap<Integer, ArrayList<Method>>();
 
-         Object testCaseObject = testCaseClass.newInstance();
+         Object testCaseObject = testCaseClass.getDeclaredConstructor().newInstance();
          kartaRuntime.initializeObject( testCaseObject );
 
          for ( Method classMethod : classMethods )
@@ -137,7 +138,8 @@ public class JavaFeatureRunner implements Callable<FeatureResult>
                if ( classMethod.isAnnotationPresent( Scenario.class ) )
                {
                   Scenario annotation = classMethod.getAnnotation( Scenario.class );
-                  DataUtils.addItemToTreeMapInSequence( new GenericObjectWithChance<Method>( classMethod, annotation.probability() ), scenarioMethodsMap, annotation.sequence() );
+                  DataUtils.addItemToTreeMapInSequence( new GenericObjectWithChance<Method>( classMethod, annotation
+                           .probability() ), scenarioMethodsMap, annotation.sequence() );
                }
                if ( classMethod.isAnnotationPresent( ScenarioTearDown.class ) )
                {
@@ -181,7 +183,8 @@ public class JavaFeatureRunner implements Callable<FeatureResult>
             }
             eventProcessor.raiseEvent( new JavaFeatureSetupStartEvent( runName, featureName, stepName ) );
 
-            TestExecutionContext testExecutionContext = new TestExecutionContext( runName, featureName, iterationIndex, Constants.__FEATURE_SETUP__, stepName, null, variables );
+            TestExecutionContext testExecutionContext = new TestExecutionContext( runName, featureName, iterationIndex, Constants.__FEATURE_SETUP__,
+                                                                                  stepName, null, variables );
             StepResult stepResult = runTestMethod( kartaRuntime, testDataSources, testCaseObject, testExecutionContext, methodToInvoke );
             stepResult.setStepIndex( stepIndex++ );
             eventProcessor.raiseEvent( new JavaFeatureSetupCompleteEvent( runName, featureName, stepName, stepResult ) );
@@ -202,7 +205,9 @@ public class JavaFeatureRunner implements Callable<FeatureResult>
             }
          }
 
-         ExecutorService iterationExecutionService = new ThreadPoolExecutor( numberOfIterationsInParallel, numberOfIterationsInParallel, 0L, TimeUnit.MILLISECONDS, new BlockingRunnableQueue( numberOfIterationsInParallel ) );
+         ExecutorService iterationExecutionService = new ThreadPoolExecutor( numberOfIterationsInParallel, numberOfIterationsInParallel, 0L,
+                                                                             TimeUnit.MILLISECONDS,
+                                                                             new BlockingRunnableQueue( numberOfIterationsInParallel ) );
 
          for ( iterationIndex = 0; ( numberOfIterations <= 0 ) || ( iterationIndex < numberOfIterations ); iterationIndex++ )
          {
@@ -224,7 +229,8 @@ public class JavaFeatureRunner implements Callable<FeatureResult>
                }
                else
                {
-                  scenariosMethodsToRun.addAll( GenericObjectWithChance.extractObjects( RandomizationUtils.generateNextComposition( random, scenarioMethods ) ) );
+                  scenariosMethodsToRun
+                           .addAll( GenericObjectWithChance.extractObjects( RandomizationUtils.generateNextComposition( random, scenarioMethods ) ) );
                }
             }
             else
@@ -232,9 +238,12 @@ public class JavaFeatureRunner implements Callable<FeatureResult>
                scenariosMethodsToRun = GenericObjectWithChance.extractObjects( scenarioMethods );
             }
 
-            JavaIterationRunner iterationRunner = JavaIterationRunner.builder().kartaRuntime( kartaRuntime ).testCaseObject( testCaseObject ).scenarioSetupMethods( scenarioSetupMethods ).scenariosMethodsToRun( scenariosMethodsToRun )
-                     .scenarioTearDownMethods( scenarioTearDownMethods ).runInfo( runInfo ).featureName( featureName ).featureDescription( featureDescription ).iterationIndex( iterationIndex ).scenarioIterationIndexMap( scenarioIterationIndexMap )
-                     .variables( DataUtils.cloneMap( variables ) ).resultConsumer( ( iterationResult ) -> accumulateIterationResult( iterationResult ) ).build();
+            JavaIterationRunner iterationRunner = JavaIterationRunner.builder().kartaRuntime( kartaRuntime ).testCaseObject( testCaseObject )
+                     .scenarioSetupMethods( scenarioSetupMethods ).scenariosMethodsToRun( scenariosMethodsToRun )
+                     .scenarioTearDownMethods( scenarioTearDownMethods ).runInfo( runInfo ).featureName( featureName )
+                     .featureDescription( featureDescription ).iterationIndex( iterationIndex ).scenarioIterationIndexMap( scenarioIterationIndexMap )
+                     .variables( DataUtils.cloneMap( variables ) )
+                     .resultConsumer( ( iterationResult ) -> accumulateIterationResult( iterationResult ) ).build();
 
             if ( numberOfIterationsInParallel == 1 )
             {
@@ -276,7 +285,8 @@ public class JavaFeatureRunner implements Callable<FeatureResult>
             }
             eventProcessor.raiseEvent( new JavaFeatureTearDownStartEvent( runName, featureName, stepName ) );
 
-            TestExecutionContext testExecutionContext = new TestExecutionContext( runName, featureName, iterationIndex, Constants.__FEATURE_TEARDOWN__, stepName, null, variables );
+            TestExecutionContext testExecutionContext = new TestExecutionContext( runName, featureName, iterationIndex,
+                                                                                  Constants.__FEATURE_TEARDOWN__, stepName, null, variables );
             StepResult stepResult = runTestMethod( kartaRuntime, testDataSources, testCaseObject, testExecutionContext, methodToInvoke );
             stepResult.setStepIndex( stepIndex++ );
 
@@ -314,7 +324,9 @@ public class JavaFeatureRunner implements Callable<FeatureResult>
       return result;
    }
 
-   public static StepResult runTestMethod( KartaRuntime kartaRuntime, ArrayList<TestDataSource> testDataSources, Object testCaseObject, TestExecutionContext testExecutionContext, Method methodToInvoke ) throws Throwable
+   public static StepResult runTestMethod( KartaRuntime kartaRuntime, ArrayList<TestDataSource> testDataSources, Object testCaseObject,
+                                           TestExecutionContext testExecutionContext, Method methodToInvoke )
+            throws Throwable
    {
       Date startTime = new Date();
       StepResult stepResult;
